--- a/src/css/layout/quotes.css
+++ b/src/css/layout/quotes.css
@@ -14,6 +14,12 @@
   max-width: 335px;
 }
 
+.quote-content {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+}
+
 .icon-run-wrapper {
   width: 32px;
   height: 32px;
